# adventofcode

./: README.MD
2015/01-12/: answer.hs
2015/02-12/: answer.hs
2015/03-12/: answer.hs
2015/04-12/: answer.hs
2015/05-12/: answer.hs
2020/: .gitignore
2020/01-12/: answer.rs
2020/03-12/: Cargo.toml
2020/04-12/: Cargo.toml  cli.yml
2020/04-12/src/: main.rs
2020/05-12/: Cargo.toml
2020/07-12/: Cargo.toml
2020/08-12/: Cargo.toml  cli.yml
2020/10-12/: Cargo.toml  cli.yml
2020/11-12/: Cargo.toml  cli.yml
2020/12-12/: Cargo.toml  cli.yml
2020/13-12/: Cargo.toml  cli.yml
2020/2-12/: Cargo.toml
2020/4-12/: Cargo.toml
2020/5-12/: cli.yml
2020/6-12/: Cargo.toml  cli.yml
2020/7-12/: cli.yml
2020/9-12/: Cargo.toml  cli.yml
2021/: .gitignore
2021/01-12/: answer.c
2021/02-12/: answer.c
2021/03-12/: answer.c
2021/04-12/: answer.c
2021/05-12/: answer.c
2021/06-12/: answer.c
2022/01-12/: answer.js
2022/02-12/: answer.js
2022/03-12/: answer.js
2022/04-12/: answer.js
2023/: .gitignore
2023/06-12/: Cargo.toml
2024/: go.mod
2024/01-12/: main.go
2024/02-12/: main.go
2024/03-12/: main.go
2024/04-12/: main.go
2024/05-12/: main.go
2024/06-12/: main.go
2024/07-12/: main.go
2024/08-12/: main.go
2024/09-12/: main.go
2024/10-12/: main.go
2024/11-12/: main.go
2024/12-12/: main.go
2024/13-12/: main.go
2024/14-12/: main.go
2024/15-12/: main.go
2024/lib/: edges.go  math.go
2025/: .gitignore  package-lock.json  package.json
2025/01-12/: answer.ts
2025/02-12/: answer.ts
2025/03-12/: answer.ts
(+34 files in other folders)
