[package]
name = "day-4"
version = "0.1.0"
authors = ["Bas Tuijnman <bas.tuijnman@24i.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
clap = { version = "2", features = [ "yaml" ] }
lazy_static = "1.4.0"